fixed the footer alignment and logo sizing

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ h2 {
 
 
 /* Style the top header */
+
 .top-header {
   margin: 0px;
   padding: 0px;
@@ -43,6 +44,7 @@ h2 {
 }
 
 /* Change the link color on hover */
+
 .top-header li a:hover {
   background-color: rgb(65, 147, 230);
   color: black;
@@ -52,19 +54,20 @@ h2 {
   background-color: rgb(0, 5, 10);
   color: white;
 }
+
 .top-header li {
   display: inline-block;
 }
 
 
 /* Style the header */
+
 .header {
   overflow: hidden;
   background-color: #e7a85d;
   padding: 20px 10px;
 }
 
-/* Style the header links */
 .header a {
   float: left;
   color: black;
@@ -76,34 +79,111 @@ h2 {
   border-radius: 4px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header .logo {
   width: 100px;
   margin: 0 0 0 1%;
 }
 
-/* Change the background color on mouse-over */
 .header a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Style the active/current link*/
 .header a.active {
   background-color: rgb(25, 48, 70);
   color: white;
 }
 
-/* Float the link section to the right */
 .header-right {
   float: right;
 }
 
 
+/* Style for the Main component */
 
+main {
+  background-color: aliceblue;
+  padding: 5px;
+}
+
+main>h2 {
+  text-align: center;
+}
+
+/* Style for container of index screen shots */
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+
+/* Style for the index page screen shots of each project */
+.index-ss {
+  flex: 1;
+  text-align: center;
+  max-width: 300px;
+  max-height: 300px;
+}
+  /* Style for the footer */
+  footer {
+    display: flex;
+    background-color: #f1f1f1;
+  }
+
+  footer div {
+    flex: 1;
+  }
+
+  footer img {
+    width: 100px;
+    margin-left: 10%;
+  }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
+
+  /* Style the top header */
+  .top-header {
+    margin: 0px;
+    padding: 0px;
+    height: fit-content;
+  }
+
+  .top-header ul {
+    margin: 0 0 40px 0;
+    padding: 0;
+    background-color: #f1f1f1;
+    list-style-type: none;
+    list-style: none;
+    text-align: center;
+  }
+
+  .top-header li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+
+  /* Change the link color on hover */
+  .top-header li a:hover {
+    background-color: rgb(65, 147, 230);
+    color: black;
+  }
+
+  .top-header li a.active {
+    background-color: rgb(0, 5, 10);
+    color: white;
+  }
+
+  .top-header li {
+    display: block;
+  }
+
+
   .header a {
     float: none;
     display: block;
@@ -129,29 +209,36 @@ h2 {
     display: none;
   }
 
-  footer-right {
+  h2 {
+    font-size: 20px;
+  }
+
+  .container {
     text-align: center;
+    justify-content: center;
+    padding: 10px;
+  }
+
+  .index-ss {
+    max-width: 200px;
+    padding: 10px;
+    max-height: 200px;
+  }
+  
+  /* Style for the footer */
+  footer {
+    display: flex;
+    background-color: #f1f1f1;
+  }
+
+  footer div {
+    flex: 1;
+  }
+
+  footer img {
+    padding: 10px;
+    width: 50px;
+    margin-left: 20%;
   }
 
 }
-
-
-
-
-/* Style thefooter with a grey background and some padding */
-footer {
-  overflow: hidden;
-  background-color: #f1f1f1;
-}
-
-footer h3 {
-  margin-left: 16px;
-}
-
-footer-right {
-  float: right;
-  text-justify: auto;
-  text-align: end;
-}
-
-
